# stocks-helper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  MULTICURRENCY_ACCOUNTING_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  constitution.md  demo.sh  fetch_historical_data.py  fix_stocks.py  fresh_import.txt  import_research_csvs.py  import_research_data.py  import_results.txt  link_all_dividends.py  migrate_constraints.py  mypy.ini  pyproject.toml  rebuild_accounting.py  rebuild_journal_entries.py  test_complete_workflow.sh  test_import.py  test_metadata_update.py  test_sector_country.py  test_yfinance.py
.claude/: settings.local.json
.github/workflows/: claude.yml  tests.yml
docs/: GAAP-IFRS-COMPLIANCE-PLAN.md  UNREALIZED-GAINS-IMPLEMENTATION.md  api_client.md  currency-gain-loss-implementation-plan.md
examples/: api_client_example.py
migrations/: add_archived_column.sql  add_import_batch_version.sql  create_currency_lots.py
scripts/: diagnose_fifo_errors.py  migrate_add_security_lots.py  migrate_decimal_precision_20_8.py  rebuild_journal_entries_gaap.py  reconcile_lots_to_holdings.py  repair_lot_allocations.py  test_fifo_direct.py
specs/001-stocks-tracker-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-stocks-tracker-analyzer/contracts/: cli-commands.md
specs/002-bulk-transaction-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bulk-transaction-import/contracts/: csv_parser.py  import_cli.yaml  import_service.py
src/cli/: __init__.py  accounting_cli.py  batch.py  holding.py  import_cli.py  init.py  insight.py  portfolio.py  quota.py  recommendation.py  report.py  splits_cli.py  stock.py  suggestion.py
src/lib/: api_client.py  api_models.py  broker_mappings.py  cache.py  config.py  csv_models.py  db.py  errors.py  fuzzy_match.py  logging_config.py  market_hours.py  quota_tracker.py  validators.py
src/models/: __init__.py  account.py  bond.py  cashflow.py  chart_of_accounts.py  currency_lot.py  exchange_rate.py  fundamental_data.py  holding.py  import_batch.py  import_error.py  insight.py  journal.py  market_data.py  portfolio.py  recommendation.py  reconciliation.py  security.py  security_lot.py  stock.py  stock_details.py  stock_split.py  suggestion.py  transaction.py
src/services/: accounting_service.py  batch_processor.py  csv_parser.py  currency_converter.py  currency_lot_service.py  fundamental_analyzer.py  import_service.py  indicator_calculator.py  insight_generator.py  lot_tracking_service.py  market_data_fetcher.py  recommendation_engine.py  reconciliation_service.py  scheduler.py  splits_service.py  suggestion_engine.py  tax_reporting.py  ticker_validation_service.py  ticker_validator.py
src/services/analytics/: __init__.py  bond_analytics.py  cashflow_projection.py  ledger_reports.py
tests/: conftest.py
tests/contract/: test_alpha_vantage.py  test_import_service_contract.py  test_lightyear_csv_contract.py  test_swedbank_csv_contract.py  test_yahoo_finance.py
tests/fixtures/csv/: buy_transactions_only.csv  lightyear_sample.csv  mixed_8_valid_2_invalid.csv  swedbank_sample.csv  valid_10_rows.csv  with_multiple_appl.csv  with_regional_tkm1t.csv  with_single_unknown.csv  with_typo_appl.csv  with_unknown_tickers.csv  with_unknown_xyzz.csv
tests/integration/: test_api_client_integration.py  test_cli_workflow.py  test_import_unknown_tickers.py
tests/unit/: test_accounting_service.py  test_api_client.py  test_batch_processor.py  test_ledger_reports.py  test_market_data_fetcher.py  test_recommendation_engine.py  test_reconciliation_service.py  test_scheduler.py  test_tax_reporting.py  test_validators.py
