[project]
name = "stocks-helper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "aiohttp>=3.9",
    "plotly>=5.0",
    "rich>=13.0",
    "APScheduler>=3.10",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Technical analysis libraries (require system dependencies)
analysis = [
    "TA-Lib>=0.4.0",
    "pandas-ta>=0.4.67b0",
]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

all = [
    "stocks-helper[analysis,dev]",
]

[project.scripts]
stocks-helper = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.models", "src.services", "src.cli", "src.lib"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.md"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "contract: Contract tests for external APIs",
    "integration: Integration tests for end-to-end scenarios",
    "unit: Unit tests for isolated components",
]
